deploy: 31638b82c1066dcd20b766eec349e4c731d4d34f

--- a/slides/03_kanban.html
+++ b/slides/03_kanban.html
@@ -28,7 +28,26 @@
       margin: 0 0.8em 0.2em -1.6em;
       vertical-align: middle;
     }
-  </style>
+    /* CSS for citations */
+    div.csl-bib-body { }
+    div.csl-entry {
+      clear: both;
+    }
+    .hanging-indent div.csl-entry {
+      margin-left:2em;
+      text-indent:-2em;
+    }
+    div.csl-left-margin {
+      min-width:2em;
+      float:left;
+    }
+    div.csl-right-inline {
+      margin-left:2em;
+      padding-left:1em;
+    }
+    div.csl-indent {
+      margin-left: 2em;
+    }  </style>
   <link rel="stylesheet" href="../assets/reveal.js-5.1.0//dist/theme/black.css" id="theme">
   <link rel="stylesheet" href="../assets/custom.css"/>
 </head>
@@ -241,7 +260,7 @@ understanding of the Kanban system’s current health and performance.</p>
 <section id="toyotas-six-rules-enwiki1239509091"
 class="title-slide slide level1">
 <h1>Toyota’s six rules <span class="citation"
-data-cites="enwiki:1239509091"><strong>enwiki:1239509091?</strong></span></h1>
+data-cites="enwiki:1239509091">[1]</span></h1>
 <div class="columns">
 <div class="column" style="width:70%;">
 <ol type="1">
@@ -292,6 +311,16 @@ bolts</figcaption>
 <h1>references</h1>
 <div class="refs">
 
+</div>
+<div id="refs" class="references csl-bib-body" role="list">
+<div id="ref-enwiki:1239509091" class="csl-entry" role="listitem">
+<div class="csl-left-margin">[1] </div><div
+class="csl-right-inline">Wikipedia contributors, <span>“Kanban —
+<span>Wikipedia</span><span>,</span> the free encyclopedia.”</span> <a
+href="https://en.wikipedia.org/w/index.php?title=Kanban&amp;oldid=1239509091"
+class="uri">https://en.wikipedia.org/w/index.php?title=Kanban&amp;oldid=1239509091</a>,
+2024.</div>
+</div>
 </div>
 </section>
     </div>
