--- a/index.html
+++ b/index.html
@@ -180,14 +180,14 @@
 <h2 id="presentations"><a class="header" href="#presentations">Presentations</a></h2>
 <h3 id="week-1"><a class="header" href="#week-1">week 1</a></h3>
 <ol>
-<li><a href="../slides/00_intro.html">intro, software architecture</a></li>
-<li><a href="../slides/01_sdlc.html">software development life cycles</a></li>
+<li><a href="/slides/00_intro.html">intro, software architecture</a></li>
+<li><a href="/slides/01_sdlc.html">software development life cycles</a></li>
 </ol>
 <h3 id="week-2"><a class="header" href="#week-2">week 2</a></h3>
 <ol>
-<li><a href="../slides/02_previously.html">week 1 summary</a></li>
-<li><a href="../slides/02_scrum.html">scrum</a></li>
-<li><a href="../slides/03_kanban.html">kanban</a></li>
+<li><a href="/slides/02_previously.html">week 1 summary</a></li>
+<li><a href="/slides/02_scrum.html">scrum</a></li>
+<li><a href="/slides/03_kanban.html">kanban</a></li>
 </ol>
 
                     </main>
