deploy: 84a30a8f48cb5924e4f84fc5308e3142253a6b54

--- a/print.html
+++ b/print.html
@@ -181,14 +181,16 @@
 <h2 id="presentations"><a class="header" href="#presentations">Presentations</a></h2>
 <h3 id="week-1"><a class="header" href="#week-1">week 1</a></h3>
 <ol>
-<li><a href="lectures//slides/00_intro.html">intro, software architecture</a></li>
-<li><a href="lectures//slides/01_sdlc.html">software development life cycles</a></li>
+<li><a href="lectures//software-engineering/slides/00_intro.html">intro, software
+architecture</a></li>
+<li><a href="lectures//software-engineering/slides/01_sdlc.html">software development life
+cycles</a></li>
 </ol>
 <h3 id="week-2"><a class="header" href="#week-2">week 2</a></h3>
 <ol>
-<li><a href="lectures//slides/02_previously.html">week 1 summary</a></li>
-<li><a href="lectures//slides/02_scrum.html">scrum</a></li>
-<li><a href="lectures//slides/03_kanban.html">kanban</a></li>
+<li><a href="lectures//software-engineering/slides/02_previously.html">week 1 summary</a></li>
+<li><a href="lectures//software-engineering/slides/02_scrum.html">scrum</a></li>
+<li><a href="lectures//software-engineering/slides/03_kanban.html">kanban</a></li>
 </ol>
 <div style="break-before: page; page-break-before: always;"></div><h1 id="schedule"><a class="header" href="#schedule">schedule</a></h1>
 <table>
