deploy: 632845dc901d7192f3756d395fb99a8dc55253df

--- a/print.html
+++ b/print.html
@@ -1950,6 +1950,17 @@ scrums meetings</li>
 <p>Zombie Scrum is Scrum, but without the beating heart of working
 software.</p>
 </blockquote>
+<p>in details</p>
+<ul>
+<li>
+<p><a href="https://medium.com/the-liberators/the-rise-of-zombie-scrum-cd98741015d5">the rise of zombie
+scrum</a></p>
+</li>
+<li>
+<p><a href="https://www.scrum.org/resources/blog/zombie-scrum-symptoms-causes-and-treatment">zombie scrum symptoms causes and
+treatment</a></p>
+</li>
+</ul>
 </div>
 <div class="column" width="50%">
 <p><img src="lectures/figures/borrowed/zombie_scrum.png" alt="" /></p>
@@ -1962,6 +1973,67 @@ releasable increment is rarely the result of a Sprint. The team also
 doesn’t have any intention to improve their situation. Actually, nobody
 cares about this team. The stakeholders have forgotten the existence of
 this team a long time ago.</p>
+</div>
+<h2 id="mindset"><a class="header" href="#mindset">mindset</a></h2>
+<div class="columns">
+<div class="column" width="55%">
+<div class="column-align-left">
+<p>zombie scrum<br />
+although every sprint can result in a new version, only the final
+version delivers real value</p>
+</div>
+<div class="column-align-left fragment">
+<p>healthy scrum<br />
+every sprint delivers value</p>
+</div>
+</div>
+<div class="column" width="45%">
+<p><img src="lectures/figures/borrowed/zombie_scrum_no_coach.png" alt="" /></p>
+</div>
+</div>
+<h2 id="working-software"><a class="header" href="#working-software">working software</a></h2>
+<div class="column-align-left">
+<p>zombie scrum<br />
+working software is nice to have</p>
+</div>
+<div class="column-align-left fragment">
+<p>healthy scrum<br />
+working software is essential</p>
+</div>
+<h2 id="what-is-work"><a class="header" href="#what-is-work">what is work</a></h2>
+<div class="columns">
+<div class="column" width="55%">
+<div class="column-align-left">
+<p>zombie scrum<br />
+writing code is work, everything else is a waste of time</p>
+</div>
+<div class="column-align-left fragment">
+<p>healthy scrum<br />
+writing code is important part of work, but building good software
+requires frequent interaction with the team, stakeholders, and peers</p>
+</div>
+</div>
+<div class="column" width="45%">
+<p><img src="lectures/figures/borrowed/zombie_scrum_work_alone.png" alt="" /></p>
+</div>
+</div>
+<h2 id="treatments"><a class="header" href="#treatments">treatments</a></h2>
+<div class="incremental">
+<ul>
+<li>Zombie Scrum teams often benefit from a shortened Sprint length.
+Instead of three to four-week iterations decrease the length to two
+weeks or even just one.</li>
+<li>Focus the Sprint Planning on answering the question of what type of
+impact the team would like to achieve within the upcoming Sprint.</li>
+<li>Start the Daily Scrum by reviewing the Sprint Goal and asking what
+achievements the team has made towards reaching that goal.</li>
+<li>Use the roadmap to provide context for the insights from the Review
+meeting. And for heaven’s sake, invite some real customers or
+stakeholders!</li>
+<li>Use the Retrospective not to drag out the same old problems but to
+dream big. A transformational approach might be better suited than an
+incremental one.</li>
+</ul>
 </div>
 <h1 id="references-2"><a class="header" href="#references-2">references</a></h1>
 <div id="refs">
