--- a/slides/02_scrum.html
+++ b/slides/02_scrum.html
@@ -1101,6 +1101,7 @@ scrums meetings</li>
 </aside>
 </section>
 
+<section>
 <section id="zombie-scrum" class="title-slide slide level1">
 <h1>zombie scrum</h1>
 <div class="columns">
@@ -1109,6 +1110,23 @@ scrums meetings</li>
 <p>Zombie Scrum is Scrum, but without the beating heart of working
 software.</p>
 </blockquote>
+<dl>
+<dt>in details</dt>
+<dd>
+<ul>
+<li><a
+href="https://medium.com/the-liberators/the-rise-of-zombie-scrum-cd98741015d5">the
+rise of zombie scrum</a></li>
+</ul>
+</dd>
+<dd>
+<ul>
+<li><a
+href="https://www.scrum.org/resources/blog/zombie-scrum-symptoms-causes-and-treatment">zombie
+scrum symptoms causes and treatment</a></li>
+</ul>
+</dd>
+</dl>
 </div><div class="column" style="width:50%;">
 <p><img data-src="figures/borrowed/zombie_scrum.png" /></p>
 </div>
@@ -1122,7 +1140,99 @@ Actually, nobody cares about this team. The stakeholders have forgotten
 the existence of this team a long time ago.</p>
 </aside>
 </section>
-
+<section id="mindset" class="slide level2">
+<h2>mindset</h2>
+<div class="columns">
+<div class="column" style="width:55%;">
+<div class="column-align-left">
+<dl>
+<dt>zombie scrum</dt>
+<dd>
+<p>although every sprint can result in a new version, only the final
+version delivers real value</p>
+</dd>
+</dl>
+</div>
+<div class="column-align-left fragment">
+<dl>
+<dt>healthy scrum</dt>
+<dd>
+<p>every sprint delivers value</p>
+</dd>
+</dl>
+</div>
+</div><div class="column" style="width:45%;">
+<p><img data-src="figures/borrowed/zombie_scrum_no_coach.png" /></p>
+</div>
+</div>
+</section>
+<section id="working-software" class="slide level2">
+<h2>working software</h2>
+<div class="column-align-left">
+<dl>
+<dt>zombie scrum</dt>
+<dd>
+<p>working software is nice to have</p>
+</dd>
+</dl>
+</div>
+<div class="column-align-left fragment">
+<dl>
+<dt>healthy scrum</dt>
+<dd>
+<p>working software is essential</p>
+</dd>
+</dl>
+</div>
+</section>
+<section id="what-is-work" class="slide level2">
+<h2>what is work</h2>
+<div class="columns">
+<div class="column" style="width:55%;">
+<div class="column-align-left">
+<dl>
+<dt>zombie scrum</dt>
+<dd>
+<p>writing code is work, everything else is a waste of time</p>
+</dd>
+</dl>
+</div>
+<div class="column-align-left fragment">
+<dl>
+<dt>healthy scrum</dt>
+<dd>
+<p>writing code is important part of work, but building good software
+requires frequent interaction with the team, stakeholders, and peers</p>
+</dd>
+</dl>
+</div>
+</div><div class="column" style="width:45%;">
+<p><img data-src="figures/borrowed/zombie_scrum_work_alone.png" /></p>
+</div>
+</div>
+</section>
+<section id="treatments" class="slide level2">
+<h2>treatments</h2>
+<div>
+<ul>
+<li class="fragment">Zombie Scrum teams often benefit from a shortened
+Sprint length. Instead of three to four-week iterations decrease the
+length to two weeks or even just one.</li>
+<li class="fragment">Focus the Sprint Planning on answering the question
+of what type of impact the team would like to achieve within the
+upcoming Sprint.</li>
+<li class="fragment">Start the Daily Scrum by reviewing the Sprint Goal
+and asking what achievements the team has made towards reaching that
+goal.</li>
+<li class="fragment">Use the roadmap to provide context for the insights
+from the Review meeting. And for heaven’s sake, invite some real
+customers or stakeholders!</li>
+<li class="fragment">Use the Retrospective not to drag out the same old
+problems but to dream big. A transformational approach might be better
+suited than an incremental one.</li>
+</ul>
+</div>
+</section></section>
 <section id="references" class="title-slide slide level1">
 <h1>references</h1>
 <div id="refs" class="references csl-bib-body" role="list">
