--- a/lectures/02_scrum.html
+++ b/lectures/02_scrum.html
@@ -242,13 +242,13 @@ and product owner</li>
 <div class="column" width="50%">
 <img src="figures/team_intercommunication_3.drawio.svg" width="200" />
 <div class="text-size-3 mt-6">
-<p>$\frac{3(3 − 1)}{2} = 3$</p>
+<p>$$ \frac{3(3 − 1)}{2} = 3 $$</p>
 </div>
 </div>
 <div class="column" width="50%">
 <img src="figures/team_intercommunication_4.drawio.svg" width="200" />
 <div class="text-size-3 mt-3">
-<p>$\frac{4(4 − 1)}{2} = 6$</p>
+<p>$$ \frac{4(4 − 1)}{2} = 6 $$</p>
 </div>
 </div>
 </div>
@@ -263,10 +263,10 @@ data-fragment-index="1" /></p>
 <div class="column center-content" width="50%">
 <div class="r-stack">
 <div class="text-size-4 fragment fade-out" data-fragment-index="1">
-<p>$\frac{5(5 − 1)}{2} = 10$</p>
+<p>$$ \frac{5(5 − 1)}{2} = 10 $$</p>
 </div>
 <div class="fragment text-size-4" data-fragment-index="1">
-<p>$\frac{n(n − 1)}{2}$</p>
+<p>$$ \frac{n(n − 1)}{2} $$</p>
 </div>
 </div>
 </div>
