--- a/slides/02_scrum.html
+++ b/slides/02_scrum.html
@@ -143,13 +143,13 @@ and product owner</li>
 <p><img data-src="figures/team_intercommunication_3.drawio.svg"
 width="200" /></p>
 <div class="text-size-3 mt-6">
-<p><math display="inline" xmlns="http://www.w3.org/1998/Math/MathML"><semantics><mrow><mfrac><mrow><mn>3</mn><mrow><mo stretchy="true" form="prefix">(</mo><mn>3</mn><mo>−</mo><mn>1</mn><mo stretchy="true" form="postfix">)</mo></mrow></mrow><mn>2</mn></mfrac><mo>=</mo><mn>3</mn></mrow><annotation encoding="application/x-tex">\frac{3(3 − 1)}{2} = 3</annotation></semantics></math></p>
+<p><math display="block" xmlns="http://www.w3.org/1998/Math/MathML"><semantics><mrow><mfrac><mrow><mn>3</mn><mrow><mo stretchy="true" form="prefix">(</mo><mn>3</mn><mo>−</mo><mn>1</mn><mo stretchy="true" form="postfix">)</mo></mrow></mrow><mn>2</mn></mfrac><mo>=</mo><mn>3</mn></mrow><annotation encoding="application/x-tex"> \frac{3(3 − 1)}{2} = 3 </annotation></semantics></math></p>
 </div>
 </div><div class="column" style="width:50%;">
 <p><img data-src="figures/team_intercommunication_4.drawio.svg"
 width="200" /></p>
 <div class="text-size-3 mt-3">
-<p><math display="inline" xmlns="http://www.w3.org/1998/Math/MathML"><semantics><mrow><mfrac><mrow><mn>4</mn><mrow><mo stretchy="true" form="prefix">(</mo><mn>4</mn><mo>−</mo><mn>1</mn><mo stretchy="true" form="postfix">)</mo></mrow></mrow><mn>2</mn></mfrac><mo>=</mo><mn>6</mn></mrow><annotation encoding="application/x-tex">\frac{4(4 − 1)}{2} = 6</annotation></semantics></math></p>
+<p><math display="block" xmlns="http://www.w3.org/1998/Math/MathML"><semantics><mrow><mfrac><mrow><mn>4</mn><mrow><mo stretchy="true" form="prefix">(</mo><mn>4</mn><mo>−</mo><mn>1</mn><mo stretchy="true" form="postfix">)</mo></mrow></mrow><mn>2</mn></mfrac><mo>=</mo><mn>6</mn></mrow><annotation encoding="application/x-tex"> \frac{4(4 − 1)}{2} = 6 </annotation></semantics></math></p>
 </div>
 </div>
 </div>
@@ -168,10 +168,10 @@ data-fragment-index="1" /></p>
 </div><div class="column center-content" style="width:50%;">
 <div class="r-stack">
 <div class="text-size-4 fragment fade-out" data-fragment-index="1">
-<p><math display="inline" xmlns="http://www.w3.org/1998/Math/MathML"><semantics><mrow><mfrac><mrow><mn>5</mn><mrow><mo stretchy="true" form="prefix">(</mo><mn>5</mn><mo>−</mo><mn>1</mn><mo stretchy="true" form="postfix">)</mo></mrow></mrow><mn>2</mn></mfrac><mo>=</mo><mn>10</mn></mrow><annotation encoding="application/x-tex">\frac{5(5 − 1)}{2} = 10</annotation></semantics></math></p>
+<p><math display="block" xmlns="http://www.w3.org/1998/Math/MathML"><semantics><mrow><mfrac><mrow><mn>5</mn><mrow><mo stretchy="true" form="prefix">(</mo><mn>5</mn><mo>−</mo><mn>1</mn><mo stretchy="true" form="postfix">)</mo></mrow></mrow><mn>2</mn></mfrac><mo>=</mo><mn>10</mn></mrow><annotation encoding="application/x-tex"> \frac{5(5 − 1)}{2} = 10 </annotation></semantics></math></p>
 </div>
 <div class="fragment text-size-4" data-fragment-index="1">
-<p><math display="inline" xmlns="http://www.w3.org/1998/Math/MathML"><semantics><mfrac><mrow><mi>n</mi><mrow><mo stretchy="true" form="prefix">(</mo><mi>n</mi><mo>−</mo><mn>1</mn><mo stretchy="true" form="postfix">)</mo></mrow></mrow><mn>2</mn></mfrac><annotation encoding="application/x-tex">\frac{n(n − 1)}{2}</annotation></semantics></math></p>
+<p><math display="block" xmlns="http://www.w3.org/1998/Math/MathML"><semantics><mfrac><mrow><mi>n</mi><mrow><mo stretchy="true" form="prefix">(</mo><mi>n</mi><mo>−</mo><mn>1</mn><mo stretchy="true" form="postfix">)</mo></mrow></mrow><mn>2</mn></mfrac><annotation encoding="application/x-tex"> \frac{n(n − 1)}{2} </annotation></semantics></math></p>
 </div>
 </div>
 </div>
