--- a/lectures/HOME.html
+++ b/lectures/HOME.html
@@ -177,20 +177,37 @@
                 <div id="content" class="content">
                     <main>
                         <h1 id="software-engineering"><a class="header" href="#software-engineering">Software Engineering</a></h1>
-<h2 id="presentations"><a class="header" href="#presentations">Presentations</a></h2>
-<h3 id="week-1"><a class="header" href="#week-1">week 1</a></h3>
+<h2 id="week-1"><a class="header" href="#week-1">week 1</a></h2>
 <ol>
 <li><a href="/software-engineering/slides/00_intro.html">intro, software
 architecture</a></li>
 <li><a href="/software-engineering/slides/01_sdlc.html">software development life
 cycles</a></li>
 </ol>
-<h3 id="week-2"><a class="header" href="#week-2">week 2</a></h3>
+<h2 id="week-2"><a class="header" href="#week-2">week 2</a></h2>
 <ol>
 <li><a href="/software-engineering/slides/02_previously.html">week 1 summary</a></li>
 <li><a href="/software-engineering/slides/02_scrum.html">scrum</a></li>
 <li><a href="/software-engineering/slides/03_kanban.html">kanban</a></li>
 </ol>
+<h3 id="readings"><a class="header" href="#readings">readings</a></h3>
+<p>scrum</p>
+<ul>
+<li><a href="/software-engineering/resources/2020-Scrum-Guide-US.pdf">The Scrum
+Guide</a></li>
+</ul>
+<p>zombie scrum</p>
+<ul>
+<li><a href="https://www.scrum.org/resources/blog/zombie-scrum-symptoms-causes-and-treatment">Zombie Scrum - Symptoms, Causes and
+Treatment</a></li>
+<li><a href="https://medium.com/the-liberators/the-rise-of-zombie-scrum-cd98741015d5">The Rise Of Zombie
+Scrum</a></li>
+</ul>
+<p>kanban</p>
+<ul>
+<li><a href="/software-engineering/resources/Kanban-Guide-2020-12.pdf">the Kanban
+Guide</a></li>
+</ul>
 
                     </main>
 
