--- a/print.html
+++ b/print.html
@@ -178,20 +178,37 @@
                 <div id="content" class="content">
                     <main>
                         <h1 id="software-engineering"><a class="header" href="#software-engineering">Software Engineering</a></h1>
-<h2 id="presentations"><a class="header" href="#presentations">Presentations</a></h2>
-<h3 id="week-1"><a class="header" href="#week-1">week 1</a></h3>
+<h2 id="week-1"><a class="header" href="#week-1">week 1</a></h2>
 <ol>
 <li><a href="lectures//software-engineering/slides/00_intro.html">intro, software
 architecture</a></li>
 <li><a href="lectures//software-engineering/slides/01_sdlc.html">software development life
 cycles</a></li>
 </ol>
-<h3 id="week-2"><a class="header" href="#week-2">week 2</a></h3>
+<h2 id="week-2"><a class="header" href="#week-2">week 2</a></h2>
 <ol>
 <li><a href="lectures//software-engineering/slides/02_previously.html">week 1 summary</a></li>
 <li><a href="lectures//software-engineering/slides/02_scrum.html">scrum</a></li>
 <li><a href="lectures//software-engineering/slides/03_kanban.html">kanban</a></li>
 </ol>
+<h3 id="readings"><a class="header" href="#readings">readings</a></h3>
+<p>scrum</p>
+<ul>
+<li><a href="lectures//software-engineering/resources/2020-Scrum-Guide-US.pdf">The Scrum
+Guide</a></li>
+</ul>
+<p>zombie scrum</p>
+<ul>
+<li><a href="https://www.scrum.org/resources/blog/zombie-scrum-symptoms-causes-and-treatment">Zombie Scrum - Symptoms, Causes and
+Treatment</a></li>
+<li><a href="https://medium.com/the-liberators/the-rise-of-zombie-scrum-cd98741015d5">The Rise Of Zombie
+Scrum</a></li>
+</ul>
+<p>kanban</p>
+<ul>
+<li><a href="lectures//software-engineering/resources/Kanban-Guide-2020-12.pdf">the Kanban
+Guide</a></li>
+</ul>
 <div style="break-before: page; page-break-before: always;"></div><h1 id="schedule"><a class="header" href="#schedule">schedule</a></h1>
 <table>
 <colgroup>
@@ -1273,13 +1290,13 @@ and product owner</li>
 <div class="column" width="50%">
 <img src="lectures/figures/team_intercommunication_3.drawio.svg" width="200" />
 <div class="text-size-3 mt-6">
-<p>$\frac{3(3 − 1)}{2} = 3$</p>
+<p>$$ \frac{3(3 − 1)}{2} = 3 $$</p>
 </div>
 </div>
 <div class="column" width="50%">
 <img src="lectures/figures/team_intercommunication_4.drawio.svg" width="200" />
 <div class="text-size-3 mt-3">
-<p>$\frac{4(4 − 1)}{2} = 6$</p>
+<p>$$ \frac{4(4 − 1)}{2} = 6 $$</p>
 </div>
 </div>
 </div>
@@ -1294,10 +1311,10 @@ data-fragment-index="1" /></p>
 <div class="column center-content" width="50%">
 <div class="r-stack">
 <div class="text-size-4 fragment fade-out" data-fragment-index="1">
-<p>$\frac{5(5 − 1)}{2} = 10$</p>
+<p>$$ \frac{5(5 − 1)}{2} = 10 $$</p>
 </div>
 <div class="fragment text-size-4" data-fragment-index="1">
-<p>$\frac{n(n − 1)}{2}$</p>
+<p>$$ \frac{n(n − 1)}{2} $$</p>
 </div>
 </div>
 </div>
