deploy: 420391cfa773a36cece9ced5e6c3f431bbcb90cc

--- a/print.html
+++ b/print.html
@@ -185,13 +185,30 @@ architecture</a></li>
 <li><a href="lectures//software-engineering/slides/01_sdlc.html">software development life
 cycles</a></li>
 </ol>
+<h3 id="readings"><a class="header" href="#readings">readings</a></h3>
+<ul>
+<li><a href="https://medium.com/decoding-tech/software-architecture-metaphors-90992e9be5f4">Software Architecture
+Metaphors</a> -
+by Lisa Stähli</li>
+<li><a href="https://www.developerfusion.com/article/84899/what-is-software-architecture/">What is Software
+Architecture?</a> -
+by Kevlin Henney</li>
+<li><a href="https://medium.com/@mbue/practical-tips-on-software-architecture-design-part-one-1c6bb0167157">Practical Tips on Software Architecture Design, Part
+One</a> -
+by Marco Bürckel</li>
+<li><a href="https://medium.com/@mbue/practical-tips-on-software-architecture-design-part-two-37c2b61d7b6d">Practical Tips on Software Architecture Design, Part
+Two</a> -
+by Marco Bürckel</li>
+<li><a href="https://github.blog/engineering/why-write-adrs/">Why Write ADRs</a> - by
+Eli Perkins</li>
+</ul>
 <h2 id="week-2"><a class="header" href="#week-2">week 2</a></h2>
 <ol>
 <li><a href="lectures//software-engineering/slides/02_previously.html">week 1 summary</a></li>
 <li><a href="lectures//software-engineering/slides/02_scrum.html">scrum</a></li>
 <li><a href="lectures//software-engineering/slides/03_kanban.html">kanban</a></li>
 </ol>
-<h3 id="readings"><a class="header" href="#readings">readings</a></h3>
+<h3 id="readings-1"><a class="header" href="#readings-1">readings</a></h3>
 <p>scrum</p>
 <ul>
 <li><a href="lectures//software-engineering/resources/2020-Scrum-Guide-US.pdf">The Scrum
