deploy: 8fef7187177f4c19ff02db1d4723bddde9d7887f

--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@ Eli Perkins</li>
 </ul>
 <h2 id="week-2"><a class="header" href="#week-2">week 2</a></h2>
 <ol>
-<li><a href="/software-engineering/slides/02_previously.html">week 1 summary</a></li>
+<li><a href="/software-engineering/slides/summary_week01.html">week 1 summary</a></li>
 <li><a href="/software-engineering/slides/02_scrum.html">scrum</a></li>
 <li><a href="/software-engineering/slides/03_kanban.html">kanban</a></li>
 </ol>
@@ -225,6 +225,13 @@ Scrum</a></li>
 <li><a href="/software-engineering/resources/Kanban-Guide-2020-12.pdf">the Kanban
 Guide</a></li>
 </ul>
+<h2 id="week-3"><a class="header" href="#week-3">week 3</a></h2>
+<ol>
+<li><a href="/software-engineering/slides/summary_week02.html">week 2 summary</a></li>
+</ol>
+<h3 id="readings-2"><a class="header" href="#readings-2">readings</a></h3>
+<p>[Quickstart Guide to User Story
+Mapping]((/software-engineering/resources/quickstart-guide-to-user-story-mapping.pdf)</p>
 
                     </main>
 
