--- a/print.html
+++ b/print.html
@@ -204,7 +204,7 @@ Eli Perkins</li>
 </ul>
 <h2 id="week-2"><a class="header" href="#week-2">week 2</a></h2>
 <ol>
-<li><a href="lectures//software-engineering/slides/02_previously.html">week 1 summary</a></li>
+<li><a href="lectures//software-engineering/slides/summary_week01.html">week 1 summary</a></li>
 <li><a href="lectures//software-engineering/slides/02_scrum.html">scrum</a></li>
 <li><a href="lectures//software-engineering/slides/03_kanban.html">kanban</a></li>
 </ol>
@@ -226,12 +226,19 @@ Scrum</a></li>
 <li><a href="lectures//software-engineering/resources/Kanban-Guide-2020-12.pdf">the Kanban
 Guide</a></li>
 </ul>
+<h2 id="week-3"><a class="header" href="#week-3">week 3</a></h2>
+<ol>
+<li><a href="lectures//software-engineering/slides/summary_week02.html">week 2 summary</a></li>
+</ol>
+<h3 id="readings-2"><a class="header" href="#readings-2">readings</a></h3>
+<p>[Quickstart Guide to User Story
+Mapping]((/software-engineering/resources/quickstart-guide-to-user-story-mapping.pdf)</p>
 <div style="break-before: page; page-break-before: always;"></div><h1 id="schedule"><a class="header" href="#schedule">schedule</a></h1>
 <table>
 <colgroup>
 <col style="width: 8%" />
 <col style="width: 16%" />
-<col style="width: 47%" />
+<col style="width: 48%" />
 <col style="width: 27%" />
 </colgroup>
 <thead>
@@ -246,20 +253,20 @@ Guide</a></li>
 <tr class="odd">
 <td style="text-align: right;">1</td>
 <td style="text-align: center;">2024-09-10</td>
-<td style="text-align: center;">intro, software architecture</td>
-<td style="text-align: center;">SDLC</td>
+<td style="text-align: center;">intro, software architecture, SDLC</td>
+<td style="text-align: center;"></td>
 </tr>
 <tr class="even">
 <td style="text-align: right;">2</td>
 <td style="text-align: center;">2024-09-17</td>
-<td style="text-align: center;">SCRUM</td>
+<td style="text-align: center;">scrum, kanban</td>
 <td style="text-align: center;">kanban</td>
 </tr>
 <tr class="odd">
 <td style="text-align: right;">3</td>
 <td style="text-align: center;">2024-09-24</td>
 <td style="text-align: center;">requirement analysis</td>
-<td style="text-align: center;">user story map</td>
+<td style="text-align: center;">user story mapping</td>
 </tr>
 <tr class="even">
 <td style="text-align: right;">4</td>
@@ -288,7 +295,7 @@ Guide</a></li>
 <tr class="even">
 <td style="text-align: right;">8</td>
 <td style="text-align: center;">2024-10-29</td>
-<td style="text-align: center;">school holiday</td>
+<td style="text-align: center;"><strong>school holiday</strong></td>
 <td style="text-align: center;"></td>
 </tr>
 <tr class="odd">
