--- a/slides/00_intro.html
+++ b/slides/00_intro.html
@@ -133,7 +133,7 @@ data-visibility="hidden">
 <colgroup>
 <col style="width: 8%" />
 <col style="width: 16%" />
-<col style="width: 47%" />
+<col style="width: 48%" />
 <col style="width: 27%" />
 </colgroup>
 <thead>
@@ -148,20 +148,20 @@ data-visibility="hidden">
 <tr class="odd">
 <td style="text-align: right;">1</td>
 <td style="text-align: center;">2024-09-10</td>
-<td style="text-align: center;">intro, software architecture</td>
-<td style="text-align: center;">SDLC</td>
+<td style="text-align: center;">intro, software architecture, SDLC</td>
+<td style="text-align: center;"></td>
 </tr>
 <tr class="even">
 <td style="text-align: right;">2</td>
 <td style="text-align: center;">2024-09-17</td>
-<td style="text-align: center;">SCRUM</td>
+<td style="text-align: center;">scrum, kanban</td>
 <td style="text-align: center;">kanban</td>
 </tr>
 <tr class="odd">
 <td style="text-align: right;">3</td>
 <td style="text-align: center;">2024-09-24</td>
 <td style="text-align: center;">requirement analysis</td>
-<td style="text-align: center;">user story map</td>
+<td style="text-align: center;">user story mapping</td>
 </tr>
 <tr class="even">
 <td style="text-align: right;">4</td>
@@ -190,7 +190,7 @@ data-visibility="hidden">
 <tr class="even">
 <td style="text-align: right;">8</td>
 <td style="text-align: center;">2024-10-29</td>
-<td style="text-align: center;">school holiday</td>
+<td style="text-align: center;"><strong>school holiday</strong></td>
 <td style="text-align: center;"></td>
 </tr>
 <tr class="odd">
@@ -242,7 +242,7 @@ class="title-slide slide level1 exclude-header">
 <colgroup>
 <col style="width: 8%" />
 <col style="width: 16%" />
-<col style="width: 47%" />
+<col style="width: 48%" />
 <col style="width: 27%" />
 </colgroup>
 <thead>
@@ -257,20 +257,20 @@ class="title-slide slide level1 exclude-header">
 <tr class="odd">
 <td style="text-align: right;">1</td>
 <td style="text-align: center;">2024-09-10</td>
-<td style="text-align: center;">intro, software architecture</td>
-<td style="text-align: center;">SDLC</td>
+<td style="text-align: center;">intro, software architecture, SDLC</td>
+<td style="text-align: center;"></td>
 </tr>
 <tr class="even">
 <td style="text-align: right;">2</td>
 <td style="text-align: center;">2024-09-17</td>
-<td style="text-align: center;">SCRUM</td>
-<td style="text-align: center;">kanban</td>
+<td style="text-align: center;">scrum, kanban</td>
+<td style="text-align: center;"></td>
 </tr>
 <tr class="odd">
 <td style="text-align: right;">3</td>
 <td style="text-align: center;">2024-09-24</td>
 <td style="text-align: center;">requirement analysis</td>
-<td style="text-align: center;">user story map</td>
+<td style="text-align: center;">user story mappint</td>
 </tr>
 <tr class="even">
 <td style="text-align: right;">4</td>
@@ -307,7 +307,7 @@ class="title-slide slide level1 exclude-header">
 <colgroup>
 <col style="width: 8%" />
 <col style="width: 16%" />
-<col style="width: 47%" />
+<col style="width: 48%" />
 <col style="width: 27%" />
 </colgroup>
 <thead>
@@ -322,7 +322,7 @@ class="title-slide slide level1 exclude-header">
 <tr class="odd">
 <td style="text-align: right;">8</td>
 <td style="text-align: center;">2024-10-29</td>
-<td style="text-align: center;">school holiday</td>
+<td style="text-align: center;"><strong>school holiday</strong></td>
 <td style="text-align: center;"></td>
 </tr>
 <tr class="even">
