deploy: ff63f3719e370c31e5f886f0ea57d62c4e7de641

--- a/lectures/00_intro.html
+++ b/lectures/00_intro.html
@@ -301,6 +301,7 @@
 <li>diagram drawing:
 <ul>
 <li><a href="https://app.diagrams.net/">draw.io</a></li>
+<li><a href="https://docs.google.com/drawings">Google Drawings</a></li>
 <li><a href="https://plantuml.com/">plantuml</a></li>
 </ul>
 </li>
