--- a/print.html
+++ b/print.html
@@ -358,6 +358,7 @@ Mapping]((/software-engineering/resources/quickstart-guide-to-user-story-mapping
 <li>diagram drawing:
 <ul>
 <li><a href="https://app.diagrams.net/">draw.io</a></li>
+<li><a href="https://docs.google.com/drawings">Google Drawings</a></li>
 <li><a href="https://plantuml.com/">plantuml</a></li>
 </ul>
 </li>
