--- a/slides/summary_week01.html
+++ b/slides/summary_week01.html
@@ -87,7 +87,7 @@ calc(100% - 1.25rem)" data-background-size="125px">
 <div class="r-stack">
 <div class="fragment fade-out" data-fragment-index="1">
 <p><img
-data-src="figures/publicdomainvectors/a-cook-is-preparing-a-meal-publicdomainvectors.org.svg"
+data-src="figures/publicdomainvectors/a-cook-is-preparing-a-meal.svg"
 width="250" /></p>
 </div>
 <div class="fragment" data-fragment-index="1">
