deploy: 190686098fa02c11539051fa2c61706856d383b8

--- a/print.html
+++ b/print.html
@@ -229,7 +229,8 @@ Guide</a></li>
 <h2 id="week-3"><a class="header" href="#week-3">week 3</a></h2>
 <ol>
 <li><a href="lectures//software-engineering/slides/summary_week02.html">week 2 summary</a></li>
-<li>requirement analysis</li>
+<li><a href="lectures//software-engineering/slides/04_requirement_analysis.html">requirement
+analysis</a></li>
 <li>user story mapping</li>
 </ol>
 <h3 id="readings-2"><a class="header" href="#readings-2">readings</a></h3>
