deploy: c2d9b59081bd0777c238f8e05dc25b77b9aefeea

--- a/print.html
+++ b/print.html
@@ -385,6 +385,11 @@ Mapping</a></li>
 <li><a href="https://excalidraw.com/">excalidraw</a></li>
 </ul>
 </li>
+<li>kanban board
+<ul>
+<li><a href="https://trello.com/">Trello</a></li>
+</ul>
+</li>
 <li>code hosting / task management
 <ul>
 <li><a href="https://github.com/">GitHub</a></li>
