--- a/lectures/00_intro.html
+++ b/lectures/00_intro.html
@@ -310,6 +310,11 @@
 <li><a href="https://excalidraw.com/">excalidraw</a></li>
 </ul>
 </li>
+<li>kanban board
+<ul>
+<li><a href="https://trello.com/">Trello</a></li>
+</ul>
+</li>
 <li>code hosting / task management
 <ul>
 <li><a href="https://github.com/">GitHub</a></li>
