--- a/slides/00_intro.html
+++ b/slides/00_intro.html
@@ -397,6 +397,10 @@ href="https://pintergreg.github.io/software-engineering/">pintergreg.github.io/s
 <ul>
 <li><a href="https://excalidraw.com/">excalidraw</a></li>
 </ul></li>
+<li>kanban board
+<ul>
+<li><a href="https://trello.com/">Trello</a></li>
+</ul></li>
 <li>code hosting / task management
 <ul>
 <li><a href="https://github.com/">GitHub</a></li>
